添加post方法支持

--- a/htdocs/test_get.html
+++ b/htdocs/test_get.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>test get</title></head>
 <body>
-	<form action ="/cgi-bin/test.pl" method ="get">
+	<form action ="/cgi-bin/test_get.pl" method ="get">
 		Name: <input type="text" name="username" value="name"/>
 		<input type ="submit" value="ok" />
 	</form>
