--- a/htdocs/test_post.html
+++ b/htdocs/test_post.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>test post</title></head>
 <body>
-	<form action ="/cgi-bin/test.pl" method ="post">
+	<form action ="/cgi-bin/test_post.py" method ="post">
 		Name: <input type="text" name="username" value="name"/>
 		<input type ="submit" value="ok" />
 	</form>
